[tool.poetry]
name = "refaxis"
version = "0.1.0"
description = ""
authors = ["chussenot"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
conan = "1.60.2"
meson = "1.2.1"
ninja = "1.11.1"

[tool.poetry.group.dev.dependencies]
jsonschema = "^4.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
validate-assets = "tests.test_validator:main"